Add transaction UI updated, Added blazor toast

--- a/CommerceProject/CommerceProject/Pages/Homepage.razor.css
+++ b/CommerceProject/CommerceProject/Pages/Homepage.razor.css
@@ -1,1 +1,7 @@
-﻿
+﻿body {
+    background-image: url("/css/images/bgh.png"), url("/css/images/uprightcv.png");
+    background-repeat: no-repeat;
+    background-position: left bottom, right top;
+    min-height: 500px;
+    background-attachment: fixed;
+}
