--- a/CommerceProject/CommerceProject/Pages/Settings.razor
+++ b/CommerceProject/CommerceProject/Pages/Settings.razor
@@ -1,6 +1,14 @@
 ﻿@page "/settings"
 
-
+<style>
+    body {
+        background-image: url("/css/images/bgh.png"), url("/css/images/uprightcv.png");
+        background-repeat: no-repeat;
+        background-position: left bottom, right top;
+        min-height: 500px;
+        background-attachment: fixed;
+    }
+</style>
 
     <div class="row gutters-sm">
         <div class="col-md-2 d-none d-md-block">
@@ -214,7 +222,6 @@
                                     </table>
                                 </div>
                             </div>
-
                     </div>
                 </div>
             </div>
