--- a/CommerceProject/CommerceProject/Shared/MainLayout.razor
+++ b/CommerceProject/CommerceProject/Shared/MainLayout.razor
@@ -1,8 +1,15 @@
 ﻿@inherits LayoutComponentBase
 @using CommerceProject.Pages
+@using Blazored.Toast.Configuration
 
+<BlazoredToasts Position="ToastPosition.BottomRight"
+                Timeout="5"
+                IconType="IconType.FontAwesome"
+                SuccessClass="success-toast-override"
+                ErrorIcon="fa fa-bug" />
 <AuthorizeView>
     <Authorized>
+
         <header>
             <NavMenu />
         </header>
