--- a/CommerceProject/CommerceProject/Shared/NavMenu.razor
+++ b/CommerceProject/CommerceProject/Shared/NavMenu.razor
@@ -10,11 +10,17 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Settings</a>
+                    <a class="nav-link" href="/transactions">Transactions</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/settings">Settings</a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-bell"></i> <span class="badge rounded-pill badge-notification bg-danger">99</span></a>
                 </li>
