Added notification drop down, added color to tables

--- a/CommerceProject/CommerceProject/Pages/Settings.razor
+++ b/CommerceProject/CommerceProject/Pages/Settings.razor
@@ -10,7 +10,7 @@
     }
 </style>
 
-    <div class="row gutters-sm">
+    <div class="row gutters-sm mt-5">
         <div class="col-md-2 d-none d-md-block">
             <div class="card">
                 <div class="card-body">
@@ -64,7 +64,7 @@
 
                     <div class="tab-pane" id="security">
                         <h6>SECURITY SETTINGS</h6>
-                        <hr class="red">
+                        <hr>
                         <form>
                             <div class="form-group">
                                 <label class="d-block">Change Password</label>
