--- a/CommerceProject/CommerceProject/Pages/Settings.razor
+++ b/CommerceProject/CommerceProject/Pages/Settings.razor
@@ -51,6 +51,10 @@
                         <div class="form-group">
                             <label for="lastName">Last Name</label>
                             <input type="text" class="form-control" id="lastName" aria-describedby="lastNameHelp" placeholder="Enter your last name" @bind-value=nametochange.lastName>
+                        </div>                        
+                        <div class="form-group">
+                            <label for="phoneNumber">Phone Number</label>
+                            <input type="text" class="form-control" id="phoneNumber" aria-describedby="lastNameHelp" placeholder="Enter your Phone Number" @bind-value=nametochange.phoneNumber>
                         </div>
                         <div class="form-group">
                             <label for="City">City</label>
