--- a/CommerceProject/CommerceProject/Shared/NavMenu.razor.css
+++ b/CommerceProject/CommerceProject/Shared/NavMenu.razor.css
@@ -70,7 +70,8 @@ li {
 }
 
 .btn {
-    font-family: sans-serif;
+    font-family: Poppins;
+    color: #FFFFFF;
     background-color: #006747;
 }
 
