--- a/CommerceProject/CommerceProject/Shared/NavMenu.razor
+++ b/CommerceProject/CommerceProject/Shared/NavMenu.razor
@@ -81,9 +81,11 @@
                     </ul>
                 </li>
             </ul>
-            <form method="post" action="Identity/Account/LogOut">
-                <button type="submit" class="nav-link btn btn-link">Sign out</button>
-            </form>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+                <form method="post" action="Identity/Account/LogOut">
+                    <button type="submit" class="nav-link btn btn-link">Sign out</button>
+                </form>
+            </div>
         </div>
     </div>
 </nav>
