--- a/CommerceProject/CommerceProject/Shared/NavMenu.razor
+++ b/CommerceProject/CommerceProject/Shared/NavMenu.razor
@@ -81,11 +81,9 @@
                     </ul>
                 </li>
             </ul>
-
-          
-
-            <button type="button" class="btn btn-primary ml-3">Sign out</button>
-        </div>
+            <form method="post" action="Identity/Account/LogOut">
+                <button type="submit" class="nav-link btn btn-link">Sign out</button>
+            </form>
 
 
         </div>
