--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ChangePassword.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ChangePassword.cshtml
@@ -50,7 +50,7 @@
                         <button type="submit" class="btn btn-primary">Update password</button>
                     </div>
                     <div class="form-group">
-                        <a href="/Settings">Changed your mind? Go Back</a>
+                        <a href="/Settings">Go Back</a>
                     </div>
                 </form>
             </section>
