--- a/CommerceProject/CommerceProject/Pages/AddTrans.razor
+++ b/CommerceProject/CommerceProject/Pages/AddTrans.razor
@@ -53,7 +53,7 @@ else
                     <td>@row.Account_Num</td>
                     <td>@row.Processing_Date</td>
                     <td>@row.Type</td>
-                    <td>@row.Amount</td>
+                    <td>@row.Amount.ToString("0.##")</td>
                     <td>@row.Description</td>
                     <td>@row.Balance</td>
                     <td>@row.Location</td>
@@ -109,25 +109,25 @@ else
 
     }
 
-    private float roundAmount()
+    private decimal roundAmount()
     {
-        double rounded = Math.Round(newTransaction.Amount, 2);
-        return (float)rounded;
+        decimal rounded = Math.Round(newTransaction.Amount, 2);
+        return rounded;
     }
 
-    private float newBalance()              // need to get balance from account? dont include in transaction? set to account
+    private decimal newBalance()              // need to get balance from account? dont include in transaction? set to account
     {
         if (trans.Count != 0)
         {
-            double rounded = Math.Round(trans.Last().Balance + newTransaction.Amount, 2);
-            return (float)rounded;
+            decimal rounded = Math.Round(trans.Last().Balance + newTransaction.Amount, 2);
+            return rounded;
         }
         else
         {
             TransactionModel t = accountInfo[0];
 
-            double rounded = Math.Round(newTransaction.Amount + t.Balance, 2);
-            return (float)(rounded);
+            decimal rounded = Math.Round(newTransaction.Amount + t.Balance, 2);
+            return rounded;
         }
     }
 
